# simple-blog

./: Cargo.toml  README.md  init.sql
src/: blog_handles.rs  error_handles.rs  index_handles.rs  main.rs
src/conf/: mod.rs
templates/: blog.html  blog_list.html  blog_list_2.html  error.html  index.html  user.html
templates/decorator/: banner.html  foot.html  head.html  main.html  service.html
templates/decorator/menu/: menu_insight.html  menu_push.html  menu_service.html  menu_spider.html  menu_sys.html
