[package]
name = "simple-blog"
version = "1.1.0"
authors = ["funnyzpc <funnyzpc@gmail.com>"]
edition = "2018"
#build = "./src/main.rs"

[dependencies]
serde_yaml = "0.8"
handlebars  =  { version = "3.0.0", features = ["dir_source"] }
chrono = { version = "0.4.19", features = ["serde"]}
once_cell = "1.7.0"

sqlx = { version = "0.5.1",default-features = false, features = ["json","postgres","runtime-actix-rustls"]}
actix-web = "4.0.0-beta.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
markdown = "0.3.0"
log = "0.4"
env_logger = "0.7.1"

[profile.release]
lto = true
